tests/gen-test/test_out/constants.txt
error: invalid scope item type
 --> constants/root.ctl:6:20
  |
6 | fn main -> uint => SUM - 40
  |                    ^^^ here
  |
  = info: expected variable or enum, got constant

